[package]
name = "wraplines"

version = "0.1.0"
edition = "2024"

description = "Text wrapping utility with support for indentation, comments and lists"
keywords = ["textwrap", "hardwrap", "rewrap"]
categories = ["command-line-utilities", "text-processing"]

license = "MIT OR Apache-2.0"

homepage = "https://github.com/satoqz/wraplines#readme"
repository = "https://github.com/satoqz/wraplines"

[dependencies]
unicode-segmentation = "1.12.0"
