[package]
name = "tortilla"

version = "0.0.1"
edition = "2024"

description = "Text wrapping utility with support for indentation and comments"
keywords = ["textwrap", "hardwrap", "rewrap"]
categories = ["command-line-utilities", "text-processing"]

license = "MIT OR Apache-2.0"

repository = "https://codeberg.org/satoqz/wraplines"
homepage = "https://codeberg.org/satoqz/wraplines#readme"

[dependencies]
unicode-segmentation = "1.12.0"
unicode-width = "0.2.1"
