[package]
name = "tortilla"

version = "0.1.0"
edition = "2024"

description = "Somewhat syntax-aware text wrapping for source code and plain text documents"
keywords = ["textwrap", "hardwrap", "rewrap"]
categories = ["command-line-utilities", "text-processing"]

license = "MIT OR Apache-2.0"

repository = "https://codeberg.org/satoqz/tortilla"
homepage = "https://codeberg.org/satoqz/tortilla#readme"

[dependencies]
unicode-segmentation = "1.12.0"
unicode-width = "0.2.1"
